--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
 
 jobs:
+  defaults:
+    run:
+      working-directory: github_tutorial
   test:
     runs-on: ubuntu-latest
     name: Run Python Tests
