--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,6 +31,7 @@ jobs:
     permissions:
       contents: read
       pages: write
+      id-token: write
     steps:
       - uses: actions/checkout@v3
 
